<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.proj.hopon.hoponproject.Register"
    android:background="#8fbaff"
    android:orientation="vertical">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/usr_reg_ET"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            android:hint="@string/username"
            android:singleLine="true" />


        <EditText
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/email_reg_ET"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            android:hint="@string/email"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pass_reg_ET"
            android:password="true"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pass_reg2_ET"
            android:password="true"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:singleLine="true" />


        <Button
            android:id="@+id/reg_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_Btn" />
    </LinearLayout>

    </ScrollView>

</LinearLayout>
